Feat: Add auth module
