# src/modules/auth/dto/response-login.dto.ts
@@ -1,0 +1,7 @@
+export class ResponseLogin {
+  accessToken: string;
+  refreshToken: string;
+  id?: string;
+  email?: string;
+  role?: string;
+}
